    * HTTPResponse.send must read error responses from InputStreamReader using
      UTF-8 character encoding (iss #426).

version 10.10 (2023-06-29)
    * Adds StandardOperations class to enumerate all standard OpenID Connect
      Federation 1.0 policy operation names and the order in which the standard
      operations must be applied to a metadata parameter.
    * The OpenID Connect Federation 1.0 AddOperation.apply method must not
      add value(s) that are already present in the parameter.
    * The OpenID Connect Federation 1.0 AddOperation.apply method must return
      an immutable List<String>.
    * The OpenID Connect Federation 1.0 SubsetOfOperation.apply method must
      return null instead of an empty List<String>.
    * Updates MetadataPolicyEntry.apply to process "one_of", "subset_of" and
      "superset_of" for voluntary parameters according to OpenID Connect
      Federation 1.0 draft 29.

version 10.10.1 (2023-06-29)
    * MetadataPolicyEntry.apply must throw a PolicyViolationException when an
      essential parameter fails a subset_of check.

version 10.11 (2023-07-08)
    * Adds EntityStatementClaimsSet.getRPInformation and setRPInformation
      methods (iss #428).
    * Moves setMetadata to parent CommonFederationClaimsSet class.
    * Moves setRPMetadata to parent CommonFederationClaimsSet class.
    * Moves setOPMetadata to parent CommonFederationClaimsSet class.
    * Moves setOAuthClientMetadata to parent CommonFederationClaimsSet class.
    * Moves setOAuthClientMetadata to parent CommonFederationClaimsSet class.
    * Moves setASMetadata to parent CommonFederationClaimsSet class.
    * Moves setFederationEntityMetadata to parent CommonFederationClaimsSet
      class.

version 10.12 (2023-07-29)
    * Adds OAuth 2.0 Rich Authorization Requests (RAR) (RFC 9396) support.
    * AuthorizationRequest receives authorization_details (RAR) support.
    * AuthenticationRequest receives authorization_details (RAR) support.